# galacritty

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: header.rs  main.rs  window.rs
