[package]
name = "alapretty"
version = "0.1.0"
authors = ["Daniel Svensson <dsvensson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.0", features = ["v3_20"] }
glib = "0.9.0"
relm = "0.19.0"
relm-derive = "0.19.0"
